--- a/test/cases/node-sass/entrypoint.scss
+++ b/test/cases/node-sass/entrypoint.scss
@@ -1,1 +1,2 @@
+@import 'pretend-sass-lib/lib'; // this makes sure we can still use external libs with --include-path
 @import 'components/MyComponent.scss'; // imports with explicit file extension should work as well
