Split the demo app into multiple components, and include an icon font.

--- a/demo/react/app/index.scss
+++ b/demo/react/app/index.scss
@@ -9,11 +9,11 @@ body, html, #container {
   display: flex;
   height: 100%;
 
-  &-left {
+  > .MessagesPanel {
     width: 300px;
     margin: 20px;
   }
-  &-right {
+  > .ConversationPanel {
     flex: 1;
     margin: 20px;
     margin-left: 0;
