--- a/demo/react/app/index.scss
+++ b/demo/react/app/index.scss
@@ -9,7 +9,7 @@ body, html, #container {
   display: flex;
   height: 100%;
 
-  > .MessagesPanel {
+  > .ThreadListPanel {
     width: 300px;
     margin: 20px;
   }
